2004-11-04 Ian Rutt
 * Added area considerations of mean_to_local subroutine in glimmer_interp.f90 (not used
   in glimmer itself).

2004-10-21 Ian Rutt
 * Sorted out water budgeting. This is something of a fudge, for although
   melt and run-off maps are determined reasonably well, an overall constant
   is added to ablation to account for any non-conservation of mass in the dynamics.
 * Also adjusted ablation calculations so as not to remove more mass than is present.

2004-10-14 Ian Rutt
 * Fixed problem with coverage map normalisation

2004-10-13 Ian Rutt
 * Reorganised upscaling and field splicing to enable easy output of 
   initial fields to global model at initialisation time.

2004-09-20 Ian Rutt
 * Updated f90_dependencies.py to Magi's latest version - handles more
 than one module per file.

2004-09-16 Ian Rutt
 * Added Tony's physics documentation to main docs.
 * Patched netcdf I/O as per Magi's email
 * Added if block round velocity calculation so they're not
   done if whichevol=2 (when they are redundant).
	
2004-09-14 Ian Rutt
 * Finished updating user documentation.

2004-09-10 Ian Rutt
 * Continued to update documentation.

2004-08-26 Ian Rutt
 * More documentation updating - also changed font size

2004-08-25 Ian Rutt
 * Fixed problem with reading arrays from config files in
   glimmer_setup.f90
 * Replaced top-level glimmer namelist with new-style configuration file.
 * Began updating documentation
 * Added character array handling to glimmer_config.f90
	
2004-08-24 Ian Rutt
 * Added user input to determine length of glimmer_example run

2004-08-23 Ian Rutt
 * Finished replacing namelist input with Magi's config-type parameter
   file format. Removed old namelist code.
 * Added two new functions (for reading real(dp) variables and arrays) to
   glimmer_config.f90.

2004-08-19 Ian Rutt
 * Moved PDD and precip forcing parameters into the namelist, and slightly
   reorganized glimmer_paramets.f90 and glimmer_physcon.f90. Would like to